--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>CV</title>
 </head>
 <body>
@@ -70,9 +71,9 @@
         <div class="box english">
             <h3>English level</h3>
             <p>Intermediate (B1)</p>
-            <div>
-                <img src="./eng-lvl.png" alt="english level img">
-            </div>
+                <a href="https://www.efset.org/cert/6ujwCi" target="_blank">
+                    <img src="./eng-lvl.png" alt="english level img">
+                </a>   
         </div>
     </div>
 </body>
