--- a/index.html
+++ b/index.html
@@ -9,9 +9,27 @@
 </head>
 <body>
     <div class="container">
+        <div class="box foto">
+            <div class="foto-wraper">
+                <img src="./img/IMG_200102.jpg" alt="foto">
+            </div>         
+        </div>
         <div class="box name">
-            <h1>Tatsiana Bandelikova</h1>
+            <h1>Tatsiana<br>Bandelikova</h1>
             <h3><i>Junior Frontend Developer</i></h3>
+        </div>
+        <div class="box summary">
+            <h3>Summary</h3>
+            <p>I'm an entry-level frontend developer who wants to learn new skills and  is motivated to work hard. Thanks to my previous work experience I know how to plan my schedule  responsibly and meet deadlines. I'm patient and diligent in work and study.</p>
+            <p>A career in this profession gives a possibility to work remotely and constantly improve your skills. I'm ready to develop further in a new field as part of a team of active and passionate specialists.</p>
+        </div>
+        <div class="box skills">
+            <h3>Skills</h3>
+            <ul>
+                <li>HTML, CSS</li>
+                <li>Java Script</li>
+                <li>VSCode, GitHub</li>
+            </ul>
         </div>
         <div class="box contacts">
             <h3>Contacts</h3>
@@ -22,30 +40,6 @@
                 <li><strong>LinkedIn:</strong><a href="https://www.linkedin.com/in/tatsiana-bandelikova/" target="_blank">tatsiana-bandelikova</a></li>
                 <li><strong>GitHub:</strong><a href="https://github.com/tbandelikova" target="_blank">tbandelikova</a></li>
             </ul>
-        </div>
-        <div class="box summary">
-            <h3>Summary</h3>
-            <p>I'm an entry-level frontend developer who wants to learn new skills and motivated to work hard. Previous work experience has taught me to responsibly plan my schedule and meet deadlines. I'm patient and diligent in work and study.</p>
-            <p>A career in this profession gives a possibility to work remotely and constantly improve your skills. I'm ready to develop further in a new field with an active and passionate community.</p>
-        </div>
-        <div class="box skills">
-            <h3>Skills</h3>
-            <ul>
-                <li>HTML, CSS</li>
-                <li>Java Script</li>
-                <li>VSCode, GitHub</li>
-            </ul>
-        </div>
-        <div class="box code">
-            <h3>Code Example</h3>
-            <p><b>Bit Counting Kata from Codewars:</b>Write a function that takes an integer as input, and returns the number of bits that are equal to one in the binary representation of that number. You can guarantee that input is non-negative.</p>
-            <pre>
-                <code>
-                    var countBits = function(n) {
-                        return n.toString(2).split('').filter(i => i == 1).length;
-                      };
-                </code>
-            </pre>
         </div>
         <div class="box courses">
             <h3>Aducation and Courses</h3>
@@ -60,6 +54,16 @@
                 </li>
             </ul>
         </div>
+        <div class="box code">
+            <h3>Code Example</h3>
+            <p><b>Bit Counting Kata from Codewars:</b>Write a function that takes an integer as input, and returns the number of bits that are equal to one in the binary representation of that number. You can guarantee that input is non-negative.</p>
+            <div>
+                <p>const countBits = function(n) {<br>
+                    <span>&ensp;</span>return n.toString(2).split('').filter(i => i == 1).length;<br>
+                    };</p>
+            </div>
+        </div>
+
         <div class="box projects">
             <h3>Experience, Educational projects</h3>
             <ul>
@@ -72,7 +76,7 @@
             <h3>English level</h3>
             <p>Intermediate (B1)</p>
                 <a href="https://www.efset.org/cert/6ujwCi" target="_blank">
-                    <img src="./eng-lvl.png" alt="english level img">
+                    <img src="./img/eng-lvl.png" alt="english level img">
                 </a>   
         </div>
     </div>
