--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 input is non-negative.</p>
             <div>
                 <p>const countBits = function(n) {<br>
-                    <span>&ensp;</span>return n.toString(2).split('').filter(i => i == 1).length;<br>
+                    <span>&ensp;</span>return n.toString(2).split('').filter(i =&gt; i == 1).length;<br>
                     };
                 </p>
             </div>
