fix: recent course name

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <h3>Aducation and Courses</h3>
                 <ul>
                     <li>
-                        <p><b>Algoritmika Coding Bootcamp</b></p>
-                        <p><i>October 2021 - May 2022 (8 months)</i></p>
+                        <p><b>RS School. JavaScript/Front-end Course</b></p>
+                        <p><i>September 2022 - ...</i></p>
                     </li>
                     <li>
                         <p><b>Algoritmika Coding Bootcamp</b></p>
