fix: main bg-color in css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </section>
             <section class="box summary">
                 <h2>Summary</h2>
-                <p>I'm an entry-level frontend developer who wants to learn new skills and  is motivated to work hard. Thanks to my previous work experience I know how to plan my schedule  responsibly and meet deadlines. I'm patient and diligent in work and study.</p>
+                <p>Junior Frontend developer motivated to learn new skills and to work hard. Thanks to my previous work experience I know how to plan my schedule responsibly and meet deadlines. I'm patient and diligent in work and study.</p>
                 <p>A career in this profession gives a possibility to work remotely and constantly improve your skills. I'm ready to develop further in a new field as part of a team of active and passionate specialists.</p>
             </section>
             <section class="box skills" id="skills">
